# windows-gui-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: automation_case.md  bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: competitive-positioning.md  demo.md  openai-oss-application.md  outreach-drafts.md  release-checklist.md  roadmap.md
examples/: notepad_calculator.md
scripts/: deploy_windows_ssh.sh
src/windows_gui_mcp/: __init__.py  server.py
src/windows_gui_mcp/core/: element.py  fallback.py  input.py  ocr.py  screenshot.py  trace.py  verify.py  wait.py  window.py
src/windows_gui_mcp/tools/: dispatch.py  schemas.py
src/windows_gui_mcp/utils/: backend.py  errors.py  retry.py
tests/: test_trace_and_script.py
